--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -223,9 +223,8 @@
 <div th:fragment="user-panel-workout-details" class="workout-content">
     <script>
         window.addEventListener('load', function () {
-            console.log(document.getElementById('workout-content-container').offsetHeight);
-            document.getElementById('workout-selection-container').setAttribute("style",("height: " +
-                document.getElementsByClassName('workout-content')[0].offsetHeight) + "px");
+            document.getElementById('workout-selection-container').style.height =
+                document.getElementsByClassName('workout-content')[0].offsetHeight + "px";
             });
     </script>
     <div class="same-row">
