Refactor JS code, add missing images

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -365,7 +365,7 @@
                 <div>
                     <label class="bigger-label" for="result">1 Rep Max:</label>
                     <input id="result" type="text" value="" readonly>
-                    <button class="my-button" type="button" onclick="calculate1RM();">
+                    <button class="my-btn" type="button" onclick="calculate1RM();">
                         Calculate
                     </button>
                 </div>
