Finish JS code refactoring

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -254,7 +254,7 @@
             <br><label for="title">Workout title: </label>
             <span class="my-input" contenteditable="true" id="title" data-set="title"></span>
             <button class='my-btn add bn' title="Add workout note"
-                    onclick='addNote(undefined, 0, undefined);'>&nbsp
+                    onclick='addNote(undefined, 0, "");'>&nbsp
             </button>
         </div>
         <div id="notes"></div>
