--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -134,6 +134,8 @@
 <!--User details registration successful-->
 <div th:fragment="register-user-success">
     <h2>Registration successful!</h2><br>
+    <!--/*@thymesVar id="emailSent" type="java"*/-->
+    <h5 th:text="${emailSent}"></h5>
     <button class="my-btn" onclick="location.href='/wl/login';" type="button">OK</button>
 </div>
 
