--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,6 +51,9 @@
         <div id="filler-2" style="display: none;">
             <br>
         </div>
+        <script>
+            restoreLogoState();
+        </script>
         <div class="tab-content">
 
             <!--Tab#1 content - overall strength calculator-->
