--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -135,6 +135,20 @@
     <button class="my-btn" onclick="location.href='/wl/login';" type="button">OK</button>
 </div>
 
+<div th:fragment="activate-account-success">
+    <h2>Account activation successful!</h2><br>
+    <h5>Your account has now been activated.</h5>
+    <br>
+    <button class="my-btn" onclick="location.href='/wl/login';" type="button">OK</button>
+</div>
+
+<div th:fragment="activate-account-failure">
+    <h2>There's been a problem activating your account!</h2><br>
+    <h5>Please contact admin or try again.</h5>
+    <br>
+    <button class="my-btn" onclick="location.href='/wl/login';" type="button">OK</button>
+</div>
+
 <!--User details update successful-->
 <div th:fragment="update-user-success">
     <h2>User details updated!</h2><br>
