--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -63,8 +63,8 @@
             <span th:if="${#fields.hasErrors('email')}" class="alert" th:errors="*{email}"></span>
             <!--/*@thymesVar id="emailExists" type="java"*/-->
             <span class='alert' th:text="${emailExists}"></span></p>
-        <p><input type="checkbox" th:field="*{emailReal}" th:value="false"/>
-            <span>This is a real email, please send me an activation message</span></p>
+        <p><input type="checkbox" th:field="*{activated}" th:value="true"/>
+            <span>Email address for testing purposes, don't send the activation message</span></p>
         <p>First name: <input type="text" th:field="*{firstName}"/></p>
         <p>Surname: <input type="text" th:field="*{lastName}"/></p>
         <p>Age: <input class="centered" type="number" th:field="*{age}"/></p>
