--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -72,7 +72,9 @@
             Male: <input type="radio" th:field="*{gender}" th:value="true" th:checked="0"/></p>
         <input type="hidden" th:field="*{role}"/>
         <input type="submit" value="Register new user">
-        <button class="my-btn" onclick="location.href='/wl/login';" type="button">Cancel</button>
+        <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
+                type="button">Cancel
+        </button>
     </form>
 </div>
 
@@ -135,33 +137,41 @@
     <h2>Registration successful!</h2><br>
     <!--/*@thymesVar id="emailSent" type="java"*/-->
     <h5 th:utext="${emailSent}"></h5>
-    <button class="my-btn" onclick="location.href='/wl/login';" type="button">OK</button>
+    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
+            type="button">OK
+    </button>
 </div>
 
 <div th:fragment="activate-account-success">
     <h2>Account activation successful!</h2><br>
     <h5>Your account has now been activated.</h5>
     <br>
-    <button class="my-btn" onclick="location.href='/wl/login';" type="button">OK</button>
+    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
+            type="button">OK
+    </button>
 </div>
 
 <div th:fragment="activate-account-failure">
     <h2>There's been a problem activating your account!</h2><br>
     <h5>Please contact admin or try again.</h5>
     <br>
-    <button class="my-btn" onclick="location.href='/wl/login';" type="button">OK</button>
+    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
+            type="button">OK
+    </button>
 </div>
 
 <!--User details update successful-->
 <div th:fragment="update-user-success">
     <h2>User details updated!</h2><br>
-    <button class="my-btn" onclick="location.href='/wl/user';" type="button">OK</button>
+    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/user';"
+            type="button">OK
+    </button>
 </div>
 
 <!--Password change successful-->
 <div th:fragment="change-password-success">
     <h2>New password has been set!</h2><br>
-    <button class="my-btn" onclick="window.location.pathname = 'wl/user/update';"
+    <button class="my-btn" onclick="preserveLogoState();window.location.pathname='wl/user/update';"
             type="button">OK
     </button>
 </div>
@@ -171,10 +181,10 @@
     <div class="controls">
         <!--/*@thymesVar id="adminName" type="java"*/-->
         <p class="same-row" th:text="'Hello ' + ${adminName} + '!'"></p>
-        <button class="same-row my-btn" onclick="location.href='/wl/logout';"
+        <button class="same-row my-btn" onclick="preserveLogoState();location.href='/wl/logout';"
                 type="button">Log out
         </button>
-        <button class="same-row my-btn" onclick="location.href='/wl/user';"
+        <button class="same-row my-btn" onclick="preserveLogoState();location.href='/wl/user';"
                 type="button">Back
         </button>
     </div>
@@ -193,7 +203,8 @@
         <div class="controls">
             <!--/*@thymesVar id="userName" type="java"*/-->
             <p class="same-row" th:text="'Hello ' + ${userName} + '!'"></p>
-            <button class="same-row my-btn" onclick="location.href='/wl/logout';"
+            <button class="same-row my-btn"
+                    onclick="preserveLogoState();location.href='/wl/logout';"
                     type="button">Log out
             </button>
             <button class="same-row my-btn" type="button"
@@ -202,7 +213,7 @@
             </button>
             <!--/*@thymesVar id="adminRights" type="java"*/-->
             <button th:if="${adminRights}" class="same-row my-btn"
-                    onclick="location.href='/wl/admin';">Admin panel
+                    onclick="preserveLogoState();location.href='/wl/admin';">Admin panel
             </button>
         </div>
         <br>
@@ -237,10 +248,8 @@
         });
     </script>
     <h3>Select existing workout from the panel to the right or...</h3>
-    <button onclick="sessionStorage.removeItem('workout');
-            preserveLogoState();
-            location.href='/wl/workout/'"
-            class="my-btn" type="button">Add new workout
+    <button onclick="sessionStorage.removeItem('workout');preserveLogoState();
+            location.href='/wl/workout/'" class="my-btn" type="button">Add new workout
     </button>
 </div>
 
