Add fade-in visual effect

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,6 +14,10 @@
 </head>
 <body>
 <div id="main-container">
+
+    <!--Fade-in effect script-->
+    <script>$("#main-container").delay(1000).animate({"opacity": "1"}, 500);</script>
+
     <div id="top-container">
         <div id="logo-container" onclick="location.href = 'http://localhost:8080/wl/';"
              style="display: block;">
