--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -399,7 +399,7 @@ button:active, input[type=submit]:active, .my-btn:active {
 }
 
 .label-large {
-    font-size: large;
+    font-size: medium;
     font-weight: bold;
 }
 
@@ -410,6 +410,10 @@ button:active, input[type=submit]:active, .my-btn:active {
 
 .workout-content > .same-row {
     padding: 0.5em 0 0.5em 0;
+}
+
+#exercises {
+    margin: 1em 0 1em 0;
 }
 
 #workout-selection-container {
