Simplify workout creation / edition UI

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -288,9 +288,7 @@
             <div id="notes"></div>
         </div>
     </div>
-    <div id="exercises" class="bordered" style="display: none;">
-        <span class="label-xl">Exercises:</span>
-    </div>
+    <div id="exercises"></div>
     <div class="bordered">
         <button class="my-btn" onclick="addExercise();">Add exercise</button>
     </div>
