--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -398,6 +398,10 @@ button:active, input[type=submit]:active, .my-btn:active {
     padding: 0.5em 0 0.5em 0;
 }
 
+#exercises {
+    padding: 0;
+}
+
 .label-s {
     font-size: small;
     font-weight: lighter;
@@ -416,6 +420,12 @@ button:active, input[type=submit]:active, .my-btn:active {
 .label-xl {
     font-size: larger;
     font-weight: bolder;
+}
+
+.set-label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 0.25em;
 }
 
 .bordered {
