--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -241,6 +241,7 @@ button:active, input[type=submit]:active, .my-btn:active {
 
 .workout {
     padding: 0 10px 0 10px;
+    margin: 1px;
 }
 
 /* sticky navigation bar */
