--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,12 +17,10 @@
         <label for="password">Password</label>:
         <input type="password" id="password" name="password"/> <br>
         <br>
-        <input type="submit" onclick="preserveLogoState();" value="Log in"/>
+        <input type="submit" onclick="storeLogoState();" value="Log in"/>
     </form>
     <br>
-    <button class="my-btn" onclick="preserveLogoState();
-            location.href = '/wl/register';" type="button">Register
-    </button>
+    <a th:href="@{/register}" type="button" class="my-btn" onclick="storeLogoState();">Register</a>
 </div>
 
 <!--Display on successful logout-->
@@ -72,9 +70,7 @@
             Male: <input type="radio" th:field="*{gender}" th:value="true" th:checked="0"/></p>
         <input type="hidden" th:field="*{role}"/>
         <input type="submit" value="Register new user">
-        <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
-                type="button">Cancel
-        </button>
+        <a class="my-btn" th:href="@{/login}" onclick="storeLogoState();" type="button">Cancel</a>
     </form>
 </div>
 
@@ -97,13 +93,10 @@
         <p>Female: <input type="radio" th:field="*{gender}" th:value="false" th:checked="0"/>
             Male: <input type="radio" th:field="*{gender}" th:value="true" th:checked="0"/></p>
         <input type="hidden" th:field="*{role}"/>
-        <input type="submit" onclick="preserveLogoState();" value="Update user details">
-        <button class="my-btn" onclick="preserveLogoState();
-                location.href='/wl/login';" type="button">Cancel
-        </button>
-        <button class="my-btn" onclick="preserveLogoState();
-                location.href='/wl/user/changepassword';" type="button">Change password
-        </button>
+        <input type="submit" onclick="storeLogoState();" value="Update user details">
+        <a class="my-btn" th:href="@{/login}" onclick="storeLogoState();" type="button">Cancel</a>
+        <a class="my-btn" th:href="@{/user/changepassword}"
+           onclick="storeLogoState();" type="button">Change password</a>
     </form>
 </div>
 
@@ -125,10 +118,9 @@
         <p>Confirm new password: <input type="password" th:field="*{confirmNewPassword}"/>
             <span th:if="${#fields.hasErrors('confirmNewPassword')}" class="alert"
                   th:errors="*{confirmNewPassword}"></span></p>
-        <input type="submit" onclick="preserveLogoState();" value="Change password">
-        <button class="my-btn" type="button" onclick="preserveLogoState();
-                location.href='/wl/user/update';">Cancel
-        </button>
+        <input type="submit" onclick="storeLogoState();" value="Change password">
+        <a class="my-btn" th:href="@{/user/update}"
+           onclick="storeLogoState();" type="button">Cancel</a>
     </form>
 </div>
 
@@ -137,43 +129,33 @@
     <h2>Registration successful!</h2><br>
     <!--/*@thymesVar id="emailSent" type="java"*/-->
     <h5 th:utext="${emailSent}"></h5>
-    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
-            type="button">OK
-    </button>
+    <a class="my-btn" th:href="@{/login}" onclick="storeLogoState();" type="button">OK</a>
 </div>
 
 <div th:fragment="activate-account-success">
     <h2>Account activation successful!</h2><br>
     <h5>Your account has now been activated.</h5>
     <br>
-    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
-            type="button">OK
-    </button>
+    <a class="my-btn" th:href="@{/login}" onclick="storeLogoState();" type="button">OK</a>
 </div>
 
 <div th:fragment="activate-account-failure">
     <h2>There's been a problem activating your account!</h2><br>
     <h5>Please contact admin or try again.</h5>
     <br>
-    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/login';"
-            type="button">OK
-    </button>
+    <a class="my-btn" th:href="@{/login}" onclick="storeLogoState();" type="button">OK</a>
 </div>
 
 <!--User details update successful-->
 <div th:fragment="update-user-success">
     <h2>User details updated!</h2><br>
-    <button class="my-btn" onclick="preserveLogoState();location.href='/wl/user';"
-            type="button">OK
-    </button>
+    <a class="my-btn" th:href="@{/login}" onclick="storeLogoState();" type="button">OK</a>
 </div>
 
 <!--Password change successful-->
 <div th:fragment="change-password-success">
     <h2>New password has been set!</h2><br>
-    <button class="my-btn" onclick="preserveLogoState();window.location.pathname='wl/user/update';"
-            type="button">OK
-    </button>
+    <a class="my-btn" th:href="@{/user/update}" onclick="storeLogoState();" type="button">OK</a>
 </div>
 
 <!--Admin panel-->
@@ -181,12 +163,10 @@
     <div class="controls">
         <!--/*@thymesVar id="adminName" type="java"*/-->
         <p class="same-row" th:text="'Hello ' + ${adminName} + '!'"></p>
-        <button class="same-row my-btn" onclick="preserveLogoState();location.href='/wl/logout';"
-                type="button">Log out
-        </button>
-        <button class="same-row my-btn" onclick="preserveLogoState();location.href='/wl/user';"
-                type="button">Back
-        </button>
+        <a class="my-btn same-row" th:href="@{/logout}"
+           onclick="storeLogoState();" type="button">Log out</a>
+        <a class="my-btn same-row" th:href="@{/user}"
+           onclick="storeLogoState();" type="button">Back</a>
     </div>
     <h2>Welcome, Admin!</h2>
 </div>
@@ -203,18 +183,13 @@
         <div class="controls">
             <!--/*@thymesVar id="userName" type="java"*/-->
             <p class="same-row" th:text="'Hello ' + ${userName} + '!'"></p>
-            <button class="same-row my-btn"
-                    onclick="preserveLogoState();location.href='/wl/logout';"
-                    type="button">Log out
-            </button>
-            <button class="same-row my-btn" type="button"
-                    onclick="preserveLogoState();
-                    location.href='/wl/user/update';">Account
-            </button>
+            <a class="my-btn same-row" th:href="@{/logout}"
+               onclick="storeLogoState();" type="button">Log out</a>
+            <a class="my-btn same-row" th:href="@{/user/update}"
+               onclick="storeLogoState();" type="button">Account</a>
             <!--/*@thymesVar id="adminRights" type="java"*/-->
-            <button th:if="${adminRights}" class="same-row my-btn"
-                    onclick="preserveLogoState();location.href='/wl/admin';">Admin panel
-            </button>
+            <a th:if="${adminRights}" th:href="@{/admin}" class="same-row my-btn"
+               onclick="storeLogoState();">Admin panel</a>
         </div>
         <br>
         <table id="workouts-list">
@@ -248,23 +223,16 @@
         });
     </script>
     <h3>Select existing workout from the panel to the right or...</h3>
-    <button onclick="sessionStorage.removeItem('workout');preserveLogoState();
-            location.href='/wl/workout/'" class="my-btn" type="button">Add new workout
-    </button>
+    <a onclick="sessionStorage.removeItem('workout');storeLogoState();"
+       th:href="@{/workout/}" class="my-btn" type="button">Add new workout</a>
 </div>
 
 <!-- user panel fragments - workout details -->
 <div th:fragment="user-panel-workout-details" class="workout-content">
     <div class="same-row bordered">
-        <button class="my-btn" onclick="saveWorkout(workout);" type="button">
-            Save
-        </button>
-        <button class="my-btn show-on-edit" onclick="deleteWorkout()" type="button">
-            Delete
-        </button>
-        <button class="my-btn" onclick="preserveLogoState();location.href='/wl/user';"
-                type="button">Cancel
-        </button>
+        <button class="my-btn" onclick="saveWorkout(workout);" type="button">Save</button>
+        <button class="my-btn show-on-edit" onclick="deleteWorkout();" type="button">Delete</button>
+        <a class="my-btn" onclick="storeLogoState();" th:href="@{/user}" type="button">Cancel</a>
     </div>
     <div class="bordered">
         <div style="display: inline-block">
@@ -293,15 +261,9 @@
         <button class="my-btn" onclick="addExercise();">Add exercise</button>
     </div>
     <div class="same-row bordered">
-        <button class="my-btn" onclick="saveWorkout(workout);" type="button">
-            Save
-        </button>
-        <button class="my-btn show-on-edit" onclick="deleteWorkout()" type="button">
-            Delete
-        </button>
-        <button class="my-btn" onclick="preserveLogoState();location.href='/wl/user';"
-                type="button">Cancel
-        </button>
+        <button class="my-btn" onclick="saveWorkout(workout);" type="button">Save</button>
+        <button class="my-btn show-on-edit" onclick="deleteWorkout()" type="button">Delete</button>
+        <a class="my-btn" onclick="storeLogoState();" th:href="@{/user}" type="button">Cancel</a>
     </div>
     <script>
         if (sessionStorage.getItem('workout')) {
