--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,8 +19,7 @@
     <script>$("#main-container").delay(1000).animate({"opacity": "1"}, 500);</script>
 
     <div id="top-container">
-        <div id="logo-container" onclick="location.href = 'http://localhost:8080/wl/';"
-             style="display: block;">
+        <div id="logo-container" style="display: block;">
 
             <!--Title and logo section-->
             <p>
